# KFCmd

./: .gitignore  CMakeLists.txt  Doxyfile  KFCmdConfig.cmake.in  README.md  conanfile.py  env.sh.in  rootlogon.C.in
cmake/: kfcmdConfig.cmake.in
core/: CMakeLists.txt
core/include/kfcmd/core/: AltPhoton.hpp  AntiMuon.hpp  ChargedParticle.hpp  Electron.hpp  HardPi0.hpp  Hypothesis.hpp  KMinusMeson.hpp  KPlusMeson.hpp  Muon.hpp  ParticleMassLessThetaPhiE.hpp  ParticlePxPyPz.hpp  ParticlePxPyPzE.hpp  Photon.hpp  PiMinusMeson.hpp  PiPlusMeson.hpp  Positron.hpp  TrPh.hpp
core/src/: AntiMuon.cpp  ChargedParticle.cpp  Electron.cpp  HardPi0.cpp  Hypothesis.cpp  KMinusMeson.cpp  KPlusMeson.cpp  Muon.cpp  ParticleMassLessThetaPhiE.cpp  ParticlePxPyPz.cpp  ParticlePxPyPzE.cpp  Photon.cpp  PiMinusMeson.cpp  PiPlusMeson.cpp  Positron.cpp  TrPh.cpp
hypos/: CMakeLists.txt
hypos/include/kfcmd/hypos/: Hypo2AltChPions2AltPhotons.hpp  Hypo2ChPions.hpp  Hypo2ChPions2AltPhotons.hpp  Hypo2ChPions2AltPhotons1HardPi0.hpp  Hypo2ChPions2AltPhotonsISR.hpp  Hypo2ChPions2AltPhotonsPi0Lost.hpp  Hypo2ChPions2HardPi0.hpp  Hypo2ChPions2Photons.hpp  Hypo2ChPions2PhotonsISR.hpp  Hypo2ChPions2PhotonsVertexOnly.hpp  Hypo2ChPions2Photons_EtaMass.hpp  Hypo2ChPions2Photons_PiMinusDecay.hpp  Hypo2ChPions2Photons_PiPlusDecay.hpp  Hypo2ChPions3PhotonsLostPhoton.hpp  Hypo2ChPions3PhotonsVertexOnly.hpp  Hypo2ChPions4AltPhotons.hpp  Hypo2ChPions4AltPhotonsPi0Lost.hpp  Hypo2ChPions4Photons.hpp  Hypo2ChPions4PhotonsVertexOnly.hpp  Hypo2ChPionsAltPhoton.hpp  Hypo2ChPionsKsKs.hpp  Hypo2ChPionsPhotonLostPhoton.hpp  Hypo2ChPionsPi0Lost.hpp  Hypo2ChPionsPiPlusLostPiMinus.hpp  Hypo2ChPionsPiPlusPiMinusLost.hpp  Hypo2ChPionsVertexOnly.hpp  Hypo2Ks2ChPions.hpp  Hypo2Ks2ChPions_NoKsMasses.hpp  Hypo2Ks_NoKsMasses.hpp  Hypo3ChPionsKMinus.hpp  Hypo3ChPionsKPlus.hpp  Hypo3Photons.hpp  Hypo4ChPions.hpp  Hypo4ChPions2AltPhotons.hpp  Hypo4ChPions2AltPhotonsLostPi0.hpp  Hypo4ChPions2Photons.hpp  Hypo4ChPionsLostPi0.hpp  Hypo6Photons.hpp  HypoChPiKMinusPiPlusKsPi0.hpp  HypoChPiKPlusPiMinusKsPi0.hpp  (+17 more)
hypos/src/: Hypo2AltChPions2AltPhotonsISR.cpp  Hypo2ChPions.cpp  Hypo2ChPions2AltPhotons.cpp  Hypo2ChPions2AltPhotons1HardPi0.cpp  Hypo2ChPions2AltPhotonsISR.cpp  Hypo2ChPions2AltPhotonsPi0Lost.cpp  Hypo2ChPions2HardPi0.cpp  Hypo2ChPions2Photons.cpp  Hypo2ChPions2PhotonsISR.cpp  Hypo2ChPions2PhotonsVertexOnly.cpp  Hypo2ChPions2Photons_EtaMass.cpp  Hypo2ChPions2Photons_PiMinusDecay.cpp  Hypo2ChPions3PhotonsLostPhoton.cpp  Hypo2ChPions3PhotonsVertexOnly.cpp  Hypo2ChPions4AltPhotons.cpp  Hypo2ChPions4AltPhotonsPi0Lost.cpp  Hypo2ChPions4Photons.cpp  Hypo2ChPions4PhotonsVertexOnly.cpp  Hypo2ChPionsAltPhoton.cpp  Hypo2ChPionsKsKs.cpp  Hypo2ChPionsPhotonLostPhoton.cpp  Hypo2ChPionsPi0Lost.cpp  Hypo2ChPionsPiPlusLostPiMinus.cpp  Hypo2ChPionsPiPlusPiMinusLost.cpp  Hypo2ChPionsVertexOnly.cpp  Hypo2ChPions_PiPlusDecay.cpp  Hypo2Ks2ChPions.cpp  Hypo2Ks2ChPions_NoKsMasses.cpp  Hypo2Ks_NoKsMasses.cpp  Hypo3ChPionsKMinus.cpp  Hypo3ChPionsKPlus.cpp  Hypo3Photons.cpp  Hypo4ChPions.cpp  Hypo4ChPions2AltPhotons.cpp  Hypo4ChPions2AltPhotonsLostPi0.cpp  Hypo4ChPions2Photons.cpp  Hypo4ChPionsLostPi0.cpp  Hypo6Photons.cpp  HypoChPiKMinusPiPlusKsPi0.cpp  HypoChPiKPlusPiMinusKsPi0.cpp  (+17 more)
include/: AntiMuon.hpp  ChargedParticle.hpp  ChargedPiMeson.hpp  Electron.hpp  Hypo2ChPions.hpp  Hypo2ChPions2Photons.hpp  Hypo2ChPionsKsKs.hpp  Hypo2ChPionsPi0Lost.hpp  Hypo2ChPionsPiPlusLostPiMinus.hpp  Hypo2ChPionsPiPlusPiMinusLost.hpp  Hypo2Photons.hpp  Hypo3ChPionsKMinus.hpp  Hypo3ChPionsKPlus.hpp  Hypo3Photons.hpp  Hypo4ChPions.hpp  Hypo4ChPions2Photons.hpp  HypoChPiKMinusPiPlusKsPi0.hpp  HypoChPiKPlusPiMinusKsPi0.hpp  HypoKsKlPi0.hpp  HypoKsKlPi0Pi0Loosen.hpp  HypoKsPiMinusKPlusLost.hpp  HypoKsPiMinusLostKPlus.hpp  HypoKsPiPlusKMinusLost.hpp  HypoKsPiPlusLostKMinus.hpp  HypoPiMinus2PhotonsPiPlusLost.hpp  HypoPiMinusKPlusKsWithPiMinusLost.hpp  HypoPiMinusKPlusKsWithPiPlusLost.hpp  HypoPiPlus2PhotonsPiMinusLost.hpp  HypoPiPlusKMinusKsWithPiMinusLost.hpp  HypoPiPlusKMinusKsWithPiPlusLost.hpp  Hypothesis.hpp  KFCmdChargedParticle.hpp  KFCmdPhoton.hpp  KMinusMeson.hpp  KPlusMeson.hpp  Muon.hpp  ParticleMassLessThetaPhiE.hpp  ParticlePxPyPzE.hpp  Photon.hpp  PiMinusMeson.hpp  (+3 more)
include/kfcmd/: AntiMuon.hpp  ChargedParticle.hpp  Electron.hpp  Hypo2ChPions2Photons.hpp  Hypo2ChPionsKsKs.hpp  Hypo2ChPionsPi0Lost.hpp  Hypo2ChPionsPiPlusLostPiMinus.hpp  Hypo2ChPionsPiPlusPiMinusLost.hpp  Hypo3ChPionsKMinus.hpp  Hypo3ChPionsKPlus.hpp  Hypo3Photons.hpp  Hypo4ChPions.hpp  Hypo4ChPions2Photons.hpp  HypoChPiKMinusPiPlusKsPi0.hpp  HypoChPiKPlusPiMinusKsPi0.hpp  HypoKsKlPi0.hpp  HypoKsKlPi0Pi0Loosen.hpp  HypoKsPiMinusKPlusLost.hpp  HypoKsPiMinusLostKPlus.hpp  HypoKsPiPlusKMinusLost.hpp  HypoKsPiPlusLostKMinus.hpp  HypoPiMinus2PhotonsPiPlusLost.hpp  HypoPiMinusKPlusKsWithPiMinusLost.hpp  HypoPiMinusKPlusKsWithPiPlusLost.hpp  HypoPiPlus2PhotonsPiMinusLost.hpp  HypoPiPlusKMinusKsWithPiMinusLost.hpp  HypoPiPlusKMinusKsWithPiPlusLost.hpp  Hypothesis.hpp  KMinusMeson.hpp  KPlusMeson.hpp  Muon.hpp  ParticleMassLessThetaPhiE.hpp  (+6 more)
src/: AntiMuon.cpp  ChargedParticle.cpp  ChargedPiMeson.cpp  Electron.cpp  Hypo2ChPions.cpp  Hypo2ChPions2Photons.cpp  Hypo2ChPionsKsKs.cpp  Hypo2ChPionsPi0Lost.cpp  Hypo2ChPionsPiPlusLostPiMinus.cpp  Hypo2ChPionsPiPlusPiMinusLost.cpp  Hypo2Photons.cpp  Hypo3ChPionsKMinus.cpp  Hypo3ChPionsKPlus.cpp  Hypo3Photons.cpp  Hypo4ChPions.cpp  Hypo4ChPions2Photons.cpp  HypoChPiKMinusPiPlusKsPi0.cpp  HypoChPiKPlusPiMinusKsPi0.cpp  HypoKsKlPi0.cpp  HypoKsKlPi0Pi0Loosen.cpp  HypoKsPiMinusKPlusLost.cpp  HypoKsPiMinusLostKPlus.cpp  HypoKsPiPlusKMinusLost.cpp  HypoKsPiPlusLostKMinus.cpp  HypoPiMinus2PhotonsPiPlusLost.cpp  HypoPiMinusKPlusKsWithPiMinusLost.cpp  HypoPiMinusKPlusKsWithPiPlusLost.cpp  HypoPiPlus2PhotonsPiMinusLost.cpp  HypoPiPlusKMinusKsWithPiMinusLost.cpp  HypoPiPlusKMinusKsWithPiPlusLost.cpp  Hypothesis.cpp  KFCmdChargedParticle.cpp  KFCmdPhoton.cpp  KMinusMeson.cpp  KPlusMeson.cpp  Muon.cpp  ParticleMassLessThetaPhiE.cpp  ParticlePxPyPzE.cpp  Photon.cpp  PiMinusMeson.cpp  (+4 more)
